Body alignment fixed

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,7 +4,7 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2vw;
+  padding: 0 2vw 15px 2vw;
 }
 footer span,
 footer button {
