--- a/styles/general.css
+++ b/styles/general.css
@@ -16,4 +16,10 @@ ul {
 }
 body {
   background: var(--clr_background);
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
